--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@svgr/webpack": "^7.0.0"
+    "@svgr/webpack": "^7.0.0",
+    "eslint": "8.39.0",
+    "eslint-config-next": "13.3.1",
+    "prettier": "2.8.8"
   }
 }
