--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.6",
@@ -16,10 +17,14 @@
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "dotenv": "^16.3.1",
     "lucide-react": "^0.236.0",
     "next": "13.3.0",
+    "nodemailer": "^6.9.3",
+    "nodemailer-smtp-transport": "^2.7.4",
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,6 +36,8 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^7.0.0",
+    "@types/nodemailer": "^6.4.8",
+    "@types/nodemailer-smtp-transport": "^2.7.5",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "prettier": "2.8.8"
